# E_commerce_Application

./: .gitignore  README.md  pom.xml
E_commerce_Application/: .env.example  HELP.md  mvnw  pom.xml
E_commerce_Application/src/main/java/com/me/e_commerce_application/controllers/: ShowItemController.java
E_commerce_Application/src/main/java/com/me/e_commerce_application/dto/: ItemIdDto.java
E_commerce_Application/src/main/java/com/me/e_commerce_application/dto/savingDtos/: SavingUserCartDto.java  SavingUserCommentDto.java  SavingUserFavouriteDto.java
E_commerce_Application/src/main/java/com/me/e_commerce_application/dto/showingDtos/: ItemFullDto.java
E_commerce_Application/src/main/java/com/me/e_commerce_application/models/main_dependencies/: Customer.java
E_commerce_Application/src/main/java/com/me/e_commerce_application/models/sub_dependencies/: UserCredentials.java
E_commerce_Application/src/main/java/com/me/e_commerce_application/repositories/: AddressRepository.java  CustomerRepository.java  PhoneNumberRepository.java  UsersCredentialsRepository.java  UsersRepository.java  VendorRepository.java
E_commerce_Application/src/main/java/com/me/e_commerce_application/services/: JWTService.java
E_commerce_Application/src/main/java/com/me/e_commerce_application/validator/: AnnotationNotes.txt
E_commerce_Application/src/main/java/com/me/e_commerce_application/validator/annotation_implements/: AgeVerificationValidator.java  EmailCheckValidator.java
E_commerce_Application/src/main/java/com/me/e_commerce_application/validator/custom_annotations/: AgeVarification.java
E_commerce_Application/src/main/resources/db/migration/: V1__user.sql  V2__users_main_dependencies.sql  V3__users_sub_dependencies.sql
E_commerce_Application/src/test/java/com/me/e_commerce_application/: ECommerceApplicationTests.java
E_commerce_app_vendor_api/: pom.xml
E_commerce_app_vendor_api/src/main/java/com/me/e_commerce_app_vendor_api/: ECommerceAppVendorApiApplication.java
E_commerce_app_vendor_api/src/main/java/com/me/e_commerce_app_vendor_api/service/: Example.java
E_commerce_app_vendor_api/src/main/java/com/me/e_commerce_app_vendor_api/service/tokenService/: PassGenLibrary.java  TokenService.java
E_commerce_app_vendor_api/src/main/resources/: application.yaml
E_commerce_app_vendor_api/src/test/java/com/me/e_commerce_app_vendor_api/: ECommerceAppVendorApiApplicationTests.java
PassEngine/: CMakeLists.txt
PassGenerator/: .gitignore  CMakeLists.txt  Makefile  PassGenerator.slnx  ProjectMap.txt  README.md  VENDOR_API_INTEGRATION.md
PassGenerator/PassGenerator/: PassGenerator.vcxproj  PassGenerator.vcxproj.filters
PassGenerator/PassGenerator/src/: DecodingProcess.cpp  EncodingProcess.cpp  JavaBridge.cpp  Main.cpp  PassGenerator.cpp  Run.cpp  Run.h  Security.cpp  Test.cpp
PassGenerator/PassGenerator/src/Data/: Data.h  time_to_UTC.txt
PassGenerator/PassGenerator/src/Data fetching/: DataFetch.cpp  DataFetch.h
PassGenerator/PassGenerator/src/Decoder/: BitwiseDecoding.cpp  LookupTable.h
PassGenerator/PassGenerator/src/Encoders/: Base64.h  Base64Encoding.cpp  BitWiseEncoding.cpp
PassGenerator/PassGenerator/src/Generator/: Generator.h
PassGenerator/PassGenerator/src/include/: Main.cpp  PassGenerator.h  Security.h
PassGenerator/dependencies/hash-library/: sha256.cpp
cpp_engine/: CMakeLists.txt
src/main/java/com/me/e_commerce_application/: ECommerceApplication.java
src/main/java/com/me/e_commerce_application/configurations/: AppConfig.java  SecurityConfig.java
src/main/java/com/me/e_commerce_application/controllers/: LoginAndRegisterControllers.java  ShowItemController.java  UserController.java
src/main/java/com/me/e_commerce_application/daos/: ItemDetailsDao.java  ItemShortDetailsDao.java
src/main/java/com/me/e_commerce_application/daos/itemDaos/: ItemDetailsDao.java  ItemShortDetailsDao.java
src/main/java/com/me/e_commerce_application/daos/userDaos/: UserLoginDao.java  UserRegistrationDao.java
src/main/java/com/me/e_commerce_application/dto/: ItemIdDto.java  JwtResponseDto.java
src/main/java/com/me/e_commerce_application/dto/fetchingDtos/: FetchingUserComments.java  FetchingUserFavouriteDto.java
src/main/java/com/me/e_commerce_application/dto/showingDtos/: ItemFullDto.java  ItemShortDto.java  ShowingUserCartFullDto.java  ShowingUserCartShortDto.java  ShowingUserComments.java  ShowingUserFavouriteDto.java  UserProfileDto.java
src/main/java/com/me/e_commerce_application/filters/: JWTAuthenticationFilter.java  LoginFilter.java
src/main/java/com/me/e_commerce_application/models/: User.java  Users.java
src/main/java/com/me/e_commerce_application/models/main_dependencies/: Admin.java  Customer.java  Vendor.java
src/main/java/com/me/e_commerce_application/models/other_dependencies/: UserCart.java  UserComments.java  UserFavourite.java
src/main/java/com/me/e_commerce_application/models/sub_dependencies/: Address.java  PhoneNumber.java  UserCredentials.java
src/main/java/com/me/e_commerce_application/repositories/: AdminRepository.java  UserCartRepository.java  UserCommentsRepository.java  UserCredentialsRepository.java  UserFavouriteRepository.java  UserRepository.java  UsersCommentsRepository.java  UsersFavouriteRepository.java
src/main/java/com/me/e_commerce_application/services/: ItemService.java  JWTService.java  UserInAppService.java  UserRegistrationAndLoginService.java  UserService.java
src/main/java/com/me/e_commerce_application/validator/: AnnotationNotes.txt
src/main/java/com/me/e_commerce_application/validator/custom_annotations/: AgeVarification.java  EmailCheck.java
src/main/resources/: application.yaml
src/main/resources/db/migration/: V1__user.sql  V2__users_main_dependencies.sql  V3__users_sub_dependencies.sql  V4__users_other_dependencies.sql
